src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_for_counter_readonly_err.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
compiler error at line 2: attempt to assign to const variable 'i'
