src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_freereg_call_arg_reclaim.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=9, upvalues=1)
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  VARARGPREP      fixed=0
0001  [  1]  CLOSURE         R0 P0
0002  [  2]  NEWTABLE        R1 T0  ; {} items=2
0003  [  2]  MOVE            R2 R0
0004  [  2]  LOADI           R6 1
0005  [  2]  CALL_R1         R2 args=2
0006  [  2]  MOVE            R3 R0
0007  [  2]  LOADI           R7 2
0008  [  2]  CALL_R1         R3 args=2
0009  [  2]  MOVE            R4 R0
0010  [  2]  LOADI           R8 3
0011  [  2]  CALL            R4 args=2 ret=0
0012  [  2]  SETLIST         R1 count=0 offset=0
0013  [  3]  LOADI           R2 1
0014  [  3]  GETTABLE        R2 R1 R2
0015  [  3]  LOADI           R3 2
0016  [  3]  GETTABLE        R3 R1 R3
0017  [  3]  ADD             R2 R2 R3
0018  [  3]  LOADI           R3 3
0019  [  3]  GETTABLE        R3 R1 R3
0020  [  3]  ADD             R2 R2 R3
0021  [  3]  RETURN          R2 count=2

; prototype 0:
  ; function (params=1, vararg=false, stack=1, upvalues=0)
  ; code:
  0000  [  1]  RETURN1         R0
