src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_freereg_chain.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=2, upvalues=1)
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  FUNC
0001  [  1]  VARARGPREP      fixed=0
0002  [  1]  LOADI           R0 1
0003  [  2]  ADDI            R1 R0 #2
0004  [  2]  ADDI            R1 R1 #3
0005  [  2]  ADDI            R1 R1 #4
0006  [  3]  RETURN          R1 count=2
