src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_freereg_nested_call.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=14, upvalues=1)
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  FUNC
0001  [  1]  VARARGPREP      fixed=0
0002  [  1]  CLOSURE         R0 P0
0003  [  2]  MOVE            R1 R0
0004  [  2]  LOADI           R13 2
0005  [  2]  CALLS           R9 args=2 ret=0 f=R0
0006  [  2]  CALLS           R5 args=0 ret=0 f=R0
0007  [  2]  TAILCALL        R1 args=0

; prototype 0:
  ; function (params=1, vararg=false, stack=2, upvalues=0)
  ; code:
  0000  [  1]  FUNC
  0001  [  1]  ADDI            R1 R0 #1
  0002  [  1]  RETURN1         R1
