src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_func_target_upvalues.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=5, upvalues=1)
; constants:
;   K0 = nil
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  VARARGPREP      fixed=0
0001  [  3]  LOAD            R0 K0  ; nil
0002  [  3]  LOAD            R1 K0  ; nil
0003  [  3]  LOAD            R2 K0  ; nil
0004  [  4]  CLOSURE         R3 P0
0005  [  5]  CLOSURE         R4 P1
0006  [  5]  RETURN          R0 count=1

; prototype 0:
  ; function (params=0, vararg=false, stack=1, upvalues=2)
  ; upvalues:
  ;   U0 = local R0, cell
  ;   U1 = local R1
  ; code:
  0000  [  4]  CLOSURE         R0 P0
  0001  [  4]  SETUPVAL        R0 U0
  0002  [  4]  RETURN0

  ; prototype 0:
    ; function (params=0, vararg=false, stack=1, upvalues=1)
    ; upvalues:
    ;   U0 = upvalue U1
    ; code:
    0000  [  4]  GETUPVAL        R0 U0
    0001  [  4]  RETURN1         R0

; prototype 1:
  ; function (params=0, vararg=false, stack=2, upvalues=2)
  ; constants:
  ;   K0 = "gg"
  ; upvalues:
  ;   U0 = upvalue U0
  ;   U1 = local R2
  ; code:
  0000  [  5]  CLOSURE         R0 P0
  0001  [  5]  GETTABUP        R1 U0 K0  ; "gg"
  0002  [  5]  ERRNNIL         R1 name=K0
  0003  [  5]  SETTABUP        R0 U0 K0  ; "gg"
  0004  [  5]  RETURN0

  ; prototype 0:
    ; function (params=0, vararg=false, stack=1, upvalues=1)
    ; upvalues:
    ;   U0 = upvalue U1
    ; code:
    0000  [  5]  GETUPVAL        R0 U0
    0001  [  5]  RETURN1         R0
