src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_global_decl.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=5, upvalues=1)
; constants:
;   K0 = "X"
;   K1 = 1
;   K2 = "print"
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  VARARGPREP      fixed=0
0001  [  2]  LOAD            R0 K1  ; 1
0002  [  2]  SETTABUP        R0 U0 K0  ; "X"
0003  [  3]  GETTABUP        R0 U0 K2  ; "print"
0004  [  3]  GETTABUP        R4 U0 K0  ; "X"
0005  [  3]  CALL_R0         R0 args=2
0006  [  3]  RETURN          R0 count=1
